tools/fleet/fixtures/packets/invalid/launch-command-mismatch.case
source=valid-work.packet
mutation=set Launch-Command to another directory
expected=invalid
